crates/lib/smllm-core/tests/snapshots/engine__enter_a_new_instance_runs_entry_and_shows_the_header.snap
---
source: crates/lib/smllm-core/tests/engine.rs
expression: r.text
---
<smllm>
session sm-n0zmmz · dev › TRIAGE · issue i-a1y99z
Arrived by: enter (new issue)
Params: stateMachine = "dev"
<instructions>
Decide whether the issue is real.
</instructions>
</smllm>
