crates/lib/smllm-core/tests/snapshots/engine__reenter_work.snap
---
source: crates/lib/smllm-core/tests/engine.rs
expression: r.text
---
<smllm>
session sm-n0zmmz · dev › WORK (visit 2) · issue GH-7
Arrived by: submit from WORK
Params: summary = "fix"
Guard: command `cargo test --quiet` → false (exit 1)
Guard: visits WORK ≥ 3 → false (visits: 1)
<instructions>
Work on one issue at a time.

Fix it. Add tests.
</instructions>
</smllm>
