crates/lib/smllm-core/tests/snapshots/engine__the_stop_hook_blocks_with_the_events_list_until_yield.snap
---
source: crates/lib/smllm-core/tests/engine.rs
expression: text
---
<smllm>
session sm-n0zmmz · dev › REVIEW · issue GH-1
Fire one event: smllm({ session: "sm-n0zmmz", event, params })
<events>
- approve
- reject — Select when a review checklist item fails.
    reason (required): Which checklist item failed.
    severity (optional, one of: minor, major): How much rework.
- yield — Stop for now and stay in REVIEW.
    note (optional): What you are waiting for.
- pause — Put issue GH-1 aside and return to idle.
- unmatched — The request fits none of these; handle it from idle, then resume.
</events>
</smllm>
